// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should dereference unconnected blank nodes in array in cyclic fashion 1`] = `
{
  "@type": "Book",
  "about": [
    {
      "@id": "_:isaac",
      "@type": "Person",
      "name": "Isaac Stevens",
      "worksFor": {
        "@id": "_:uw",
        "@type": "Organization",
        "founder": [Circular],
        "name": "University of Washington",
      },
    },
    {
      "@id": "_:uw",
      "@type": "Organization",
      "founder": {
        "@id": "_:isaac",
        "@type": "Person",
        "name": "Isaac Stevens",
        "worksFor": [Circular],
      },
      "name": "University of Washington",
    },
  ],
  "author": {
    "@type": "Person",
    "name": "Edmond S. Meany",
  },
  "name": "Governors of Washington: territorial and state",
}
`;

exports[`should dereference unconnected blank nodes in cyclic fashion 1`] = `
{
  "@type": "Book",
  "author": {
    "@id": "_:isaac",
    "@type": "Person",
    "name": "Isaac Stevens",
    "worksFor": {
      "@id": "_:uw",
      "@type": "Organization",
      "founder": [Circular],
      "name": "University of Washington",
    },
  },
  "name": "Report of Explorations for a Route for the Pacific Railroad near the 47th and 49th Parallels of North Latitude, from St. Paul, Minnesota, to Puget Sound",
  "sourceOrganization": {
    "@id": "_:uw",
    "@type": "Organization",
    "founder": {
      "@id": "_:isaac",
      "@type": "Person",
      "name": "Isaac Stevens",
      "worksFor": [Circular],
    },
    "name": "University of Washington",
  },
}
`;

exports[`should dereference unconnected blank nodes in the graph 1`] = `
[
  {
    "@id": "_:isaac",
    "@type": "Person",
    "name": "Isaac Stevens",
    "worksFor": {
      "@id": "_:uw",
      "@type": "Organization",
      "founder": [Circular],
      "name": "University of Washington",
    },
  },
  {
    "@id": "_:uw",
    "@type": "Organization",
    "founder": {
      "@id": "_:isaac",
      "@type": "Person",
      "name": "Isaac Stevens",
      "worksFor": [Circular],
    },
    "name": "University of Washington",
  },
]
`;
